* chore(.gitignore): add .issues to the list of ignored files * feat(application.tailwind.css): add background-color property to input:focus style * feat(dark_mode_controller.js): add a new controller for managing dark mode * fix(_head.html.erb): move hotwire_livereload_tags to the end of the head section * feat(_meta_tags.html.erb): add meta tag for theme-color with content #fff * fix(application.html.erb): remove unnecessary classes and add bg-white and dark:bg-gray-800 classes to body * fix(new.html.erb): change h-screen to h-full in sessions/new.html.erb and users/new.html.erb

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -169,6 +169,8 @@ input:focus {
     @apply h-full font-sans text-gray-950 dark:text-gray-100 flex overflow-y-auto;
     -webkit-overflow-scrolling: touch;
     min-height: -webkit-fill-available;
-    padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
+    padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom)
+      env(safe-area-inset-left);
+    background-color: #ffffff;
   }
 }
